# whycon-orig

./: .gitignore  CMakeLists.txt
etc/: .gitignore
include/imageproc/: CCircleDetect.h  CNecklace.h  CTransformation.h  sysmat.h
include/whycon/camera/: uvcvideo.h  v4l2uvc.h
include/whycon/common/: CPoint.hpp  CPosition.h  CPosition.hpp  CRawImage.hpp  cmath.hpp
include/whycon/imageproc/: CCircleDetect.hpp  CNecklace.hpp  CTransformation.h
src/camera/: CCamera.cpp  avilib.c  color.c  utils.c  v4l2uvc.c
src/common/: CMakeLists.txt  CMessage.cpp  CPoint.cpp  CPosition.cpp  CRawImage.cpp  CThread.cpp  CTimer.cpp  cmath.cpp
src/gui/: CGui.cpp
src/imageproc/: CCircleDetect.cpp  CMakeLists.txt  CNecklace.cpp  CPositionServer.cpp  CTransformation.cpp  sysmat.cpp
src/main/: whycon.cpp
